--- a/sshd_config.yml
+++ b/sshd_config.yml
@@ -3,7 +3,7 @@
   tasks:
     - name: 修改ssh配置文件的安全选项
       lineinfile:
-        dest: /root/ap/sshd_config
+        dest: /etc/ssh/sshd_config
         regexp: "{{ item.regexp }}"
         line: "{{ item.line }}"
         state: present
